# photo.initprism

./: .firebaserc  .gitignore  README.md  elm.json
manifester/: Cargo.toml
manifester/src/: main.rs  utils.rs
manifester/src/manifest/: map.rs  mod.rs  nominatim.rs
manifester/src/world/: attribution.yaml  cca3.json  manifest.yaml
src/: Gallery.elm  Icons.elm  Main.elm  Ports.elm  Session.elm  gallery.css  init.js
