[package]
name = "manifester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
image = "0.24"
indicatif = "0.17"
globwalk = "0.7"
num_cpus = "1.13"
rayon = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde =  { version = "1.0", features= ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = "0.24"
strum_macros = "0.24"
url = { version = "2.3", features = ["serde"] }
lazy_static = "1.4.0"